[package]
name = "aws-token-rotate"
description = "Simple tool to rotate AWS token"
version = "1.0.3"
authors = ["Maxime Cottret <maxime.cottret@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/aolwas/aws-token-rotate.git"
readme = "README.md"
keywords = ["AWS", "IAM"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0"
clap = "3.1.18"
rusoto_core = "0.48"
rusoto_iam = "0.48"
tokio = { version = "1", features = ["sync"]}
configparser = "1.0"
