[package]
name = "aws-token-rotate"
description = "Simple tool to rotate AWS token"
version = "2.0.1"
authors = ["Maxime Cottret <maxime.cottret@gmail.com>"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/aolwas/aws-token-rotate.git"
readme = "README.md"
keywords = ["AWS", "IAM"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.6.2", features = [
    "behavior-version-latest",
    "rustls",
] }
aws-types = {version = "1.3.7"}
aws-sdk-iam = "1.70.0"
configparser = { version = "3.1.0", features = ["indexmap"] }
tokio = { version = "1", features = ["full"] }
clap = "4.5"
shellexpand = "3.1.0"
